--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "astro_grow",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.4.1"
+    "@astrojs/react": "^2.1.3",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "astro": "^2.4.1",
+    "minisearch": "^6.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
