--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "astro": "^4.0.4",
+    "astro-webmanifest": "^1.0.0",
     "minisearch": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
